# comsosFivePieceBasis

./: .clang-format  .editorconfig  .gitignore  README.md  embedr.yaml
.github/workflows/: build.yml
components/cosmos_battery/: CMakeLists.txt  Kconfig  cosmos_battery_adc.cpp  cosmos_battery_adc.h  cosmos_battery_matter.cpp  cosmos_battery_task.cpp
components/cosmos_battery/include/: cosmos_battery.h  cosmos_battery_matter.h
components/cosmos_matter_common/: CMakeLists.txt  cosmos_factory_reset_task.cpp  cosmos_matter_events.cpp  cosmos_matter_ota.cpp  idf_component.yml
components/cosmos_matter_common/include/: cosmos_matter_events.h  cosmos_matter_ota.h  factory_reset_task.h
docs/: BUILD.md  CODE_STYLE.md  CONTRIBUTING.md  HA.md  HAOTA.md  HARDWARE.md  POLISH_PLAN.md  REPO_LAYOUT.md  TESTING.md  sdkconfig.defaults.matter-base
home-assistant/: README.md
iotBasicBinarySensor/: CMakeLists.txt  log.txt  sdkconfig  sdkconfig.defaults
iotBasicBinarySensor/main/: CMakeLists.txt  Kconfig.projbuild  binary_sensor_task.cpp  evt_service_task.c  factory_reset_task.cpp  idf_component.yml  main.cpp  matter_task.cpp  panic_alarm_task.c
iotBasicBinarySensor/tasks/: binary_sensor_task.h  evt_service_task.h  factory_reset_task.h  matter_task.h  panic_alarm_task.h
iotDualModeBtn/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.c6_thread  sdkconfig.defaults.c6_wifi_thread
iotDualModeBtn/main/: CMakeLists.txt  addr_led_task.c  iot_button_task.cpp  main.cpp  matter_task.cpp
iotDualModeBtn/tasks/: iot_button_task.h  matter_task.h
iotEnvironmentalSensor/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
iotEnvironmentalSensor/main/: CMakeLists.txt  bme680_task.cpp  factory_reset_task.cpp  main.cpp  matter_task.cpp
iotEnvironmentalSensor/tasks/: bme680_task.h  factory_reset_task.h  matter_task.h
tools/scripts/: build_all.sh  format_sources.sh
